--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,18 +1,37 @@
-
-<form class="ion-margin-top ion-padding-start ion-padding-end">
+<form [formGroup]="loginForm" (ngSubmit)="onsubmit.emit(loginForm.value)" class="ion-margin-top ion-padding-start ion-padding-end">
   <ion-item lines="none" detail="false" color="white" class="ion-margin-bottom ion-border">
     <ion-label aria-label="radix pin" position="stacked">Radix Pin</ion-label>
     <ion-input aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
   </ion-item>
+  <div class="validation-errors fs-12">
+    <div *ngFor="let validation of validation_messages.pin">
+      <div class="error-message" *ngIf="loginForm.get('pin')?.hasError(validation.type) && loginForm.get('pin')?.touched">
+        <div>
+          {{" "+validation.message}}
+        </div>
+      </div>
+    </div>
+  </div>
+
   <ion-item lines="none" detail="false" color="white" class="ion-margin-bottom ion-border">
     <ion-label aria-label="radix passcode" position="stacked">Passcode</ion-label>
-    <ion-input aria-label="radix passcode" type="password" placeholder="XXXXXXX"></ion-input>
-    <ion-button slot="end" color="dark" fill="clear" style="margin-top: 20px;">
-      <i class="ri-eye-close-line ri-xl fs-20"></i>
+    <ion-input [type]="hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX"></ion-input>
+    <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 20px;">
+      <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-20"></i>
+      <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-20"></i>
     </ion-button>
   </ion-item>
-  
-  <ion-button class="ion-no-border" expand="full" size="large" color="primary">
+  <div class="validation-errors fs-12">
+    <div *ngFor="let validation of validation_messages.password" class="error">
+      <div *ngIf="loginForm.get('password')?.hasError(validation.type) && loginForm.get('password')?.touched">
+        <div>
+          {{" "+validation.message}}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="loginForm.invalid" color="primary">
     <span class="fs-14">Continue</span>
   </ion-button>
   <ion-button expand="full" size="large" fill="clear" mode="ios" color="dark" routerLink="/register">
