--- a/src/app/modules/login/login.page.html
+++ b/src/app/modules/login/login.page.html
@@ -22,7 +22,7 @@
     </ion-label>
   </ion-list-header>
 
-  <login-form></login-form>
+  <login-form (onsubmit)="login($event)"></login-form>
 
 </ion-content>
 
