--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -592,3 +592,11 @@ code-input {
       }
   }
 }
+
+
+ion-title {
+    img {
+        width: 70px !important;
+        margin-top: 5px !important;
+    }
+}
