updated register form

--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -16,7 +16,7 @@
     </ion-label>
   </ion-list-header>
 
-  <register-form></register-form>
+  <register-form (onsubmit)="register($event)"></register-form>
 </ion-content>
 
 <!-- <ion-footer color="white" class="bg-white ion-no-border">
