--- a/src/app/modules/login/login.page.html
+++ b/src/app/modules/login/login.page.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button routerLink="/forgot" routerDirection="forward">
-        <span>Recover Your Account</span>
+        <span class="fs-14">Recover Your Account</span>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -17,7 +17,7 @@
   <onboarding-modal [isOpen]="globals.modalData?.walkthroughmodal || false"></onboarding-modal>
   <ion-list-header class="ion-margin-bottom">
     <ion-label>
-      <h2 class="fs-20 bold">Welcome Back !</h2>
+      <h2 class="fs-20 bold">Welcome Back</h2>
       <p class="ion-text-wrap fs-14">By continuning, you agree to Radix terms of service and acknolwedge our privacy policy</p>
     </ion-label>
   </ion-list-header>
