--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -5,6 +5,11 @@
         <i class="ri-arrow-left-line ri-xl fs-20"></i>
       </ion-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/login" routerDirection="forward">
+        <span>Sign In</span>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -19,7 +24,7 @@
   <register-form (onsubmit)="register($event)"></register-form>
 </ion-content>
 
-<!-- <ion-footer color="white" class="bg-white ion-no-border">
+<ion-footer color="white" class="bg-white ion-no-border">
   <ion-item lines="none" class="bottom">
     <i class="ri-safe-2-fill ri-xl fs-20" slot="start"></i>
     <ion-label>
@@ -27,4 +32,4 @@
     </ion-label>
   </ion-item>
   <br />
-</ion-footer> -->
+</ion-footer>
