--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -4,4 +4,6 @@
     <ion-refresher slot="fixed" (ionRefresh)="getAccounts($event, true)">
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
+
+    <account-portfolio [balance]="0" [currency]="'NGN '"></account-portfolio>
 </ion-content>
