--- a/src/app/shared/components/onboarding/onboarding.component.html
+++ b/src/app/shared/components/onboarding/onboarding.component.html
@@ -5,7 +5,7 @@
       <swiper-slide>
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="center">
-            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime,<br /> Anywhere</h2>
+            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime, Anywhere</h2>
             <p class="ion-margin-top">To automatically focus the next input when done with the previous one we modify</p>
           </ion-label>
         </ion-item>
@@ -16,7 +16,7 @@
       <swiper-slide>
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="center">
-            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime,<br /> Anywhere</h2>
+            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime, Anywhere</h2>
             <p class="ion-margin-top">To automatically focus the next input when done with the previous one we modify</p>
           </ion-label>
         </ion-item>
