--- a/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
+++ b/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
@@ -7,11 +7,12 @@
     <ion-label>
       <p class="fs-14">{{ source | titlecase }}</p>
       <h2 class="fs-20 text-primary">{{ balance | currency : ' '+currency}}</h2>
+      <!-- <p class="fs-14">{{ accountNumber | uppercase }}</p> -->
       <p class="fs-12 text-medium">Made up of all your investments</p>
     </ion-label>
     <ion-note slot="end">
-      <span class="fs-14">{{ accountNumber | uppercase }}</span>
-      <!-- <span class="fs-14">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span> -->
+      <span class="fs-14 text-dark">{{ accountNumber | uppercase }}</span>
+      <!-- <span class="fs-14 text-dark">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span> -->
     </ion-note>
   </ion-item>
 
