--- a/src/theme/ios.scss
+++ b/src/theme/ios.scss
@@ -1,6 +1,6 @@
 
 :root[mode="md"].plt-ios {
-    --ion-font-family: "OpenSans", "PingFang SC", Arial, "Helvetica Neue", "Microsoft YaHei", sans-serif !important;
+    --ion-font-family: "Moderat", "PingFang SC", Arial, "Helvetica Neue", "Microsoft YaHei", sans-serif !important;
     // --ion-font-family: 'NotoSans', 'Moderat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     -webkit-font-smoothing: antialiased !important;
     -moz-osx-font-smoothing: grayscale !important;
