--- a/src/app/shared/components/layout/mobile/mobile-footer/mobile-footer.component.html
+++ b/src/app/shared/components/layout/mobile/mobile-footer/mobile-footer.component.html
@@ -23,8 +23,8 @@
       <span >Micro</span>
     </ion-tab-button>
     <ion-tab-button tab="settings">
-      <i class="fi fi-rs-user before fs-22"></i>
-      <i class="fi fi-ss-user after fs-22"></i>
+      <i class="fi fi-rs-settings before fs-22"></i>
+      <i class="fi fi-ss-settings after fs-22"></i>
       <span >Settings</span>
     </ion-tab-button>
   </ion-tab-bar>
