--- a/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.scss
+++ b/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.scss
@@ -8,4 +8,7 @@
     ion-avatar {
         margin-left: 10px !important;
     }
+    // ion-button {
+    //     margin-bottom: -2px !important;
+    // }
 }
