--- a/src/app/shared/components/toast-message/toast-message.component.html
+++ b/src/app/shared/components/toast-message/toast-message.component.html
@@ -6,4 +6,5 @@
   [cssClass]="cssClass"
   [position]="position"
   [buttons]="toastButtons"
+  (didDismiss)="setRoleMessage($event)"
 ></ion-toast>
