--- a/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
+++ b/src/app/modules/accounts/components/accounts/account-portfolio/account-portfolio.component.html
@@ -3,24 +3,25 @@
     <span class="text-dark">Radix Pension Managers</span>
   </ion-badge>
   <br /> -->
+  <!-- <ion-item color="white" lines="none" detail="true" mode="ios">
+    <ion-fab-button slot="start" class="no-shadow">
+      <img [src]=" 'assets/img/icon.webp' " >
+    </ion-fab-button>
+    <ion-label>
+      <h2 class="text-primary fs-14">{{ source | titlecase }}</h2>
+    </ion-label>
+  </ion-item> -->
   <ion-item color="white" lines="none" detail="false">
     <ion-label>
-      <p class="fs-14">{{ source | titlecase }}</p>
-      <h2 class="fs-20 text-primary">{{ balance | currency : ' '+currency}}</h2>
-      <!-- <p class="fs-14">{{ accountNumber | uppercase }}</p> -->
-      <p class="fs-12 text-medium">Made up of all your investments</p>
+      <p class="fs-14 fw-4">{{ accountNumber | uppercase }} </p>
+      <h2 class="fs-20 text-primary">{{ balance | currency : currency }}</h2>
+      <p class="fs-12 text-medium">{{ source | titlecase }}</p>
+      <!-- <p class="fs-12 text-medium">Made up of all your investments</p> -->
     </ion-label>
     <ion-note slot="end">
-      <span class="fs-14 text-dark">{{ accountNumber | uppercase }}</span>
-      <!-- <span class="fs-14 text-dark">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span> -->
+      <span class="fs-14 text-dark">{{accounts.rsaaccounts.length + accounts.volaccounts.length}} Accounts</span>
     </ion-note>
   </ion-item>
-
-  <!-- <div class="ion-padding-start ion-padding-end">
-    <ion-button color="medium" class=" no-shadow" expand="block" (click)="onViewTransaction.emit()">
-      <span mode="ios" class="fs-12">View All Transactions</span>
-    </ion-button>
-  </div> -->
 
   <ng-content></ng-content>
 
