--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -11,7 +11,7 @@
     font-family: 'OpenSans';
     src: url('../assets/fonts/opensans-48343a1b.ttf') format('truetype');
 }
-// @font-face {
-//     font-family: 'ibm-plex';
-//     src: url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-// }
+@font-face {
+    font-family: 'inter';
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+}
