--- a/src/theme/ios.scss
+++ b/src/theme/ios.scss
@@ -1,5 +1,9 @@
 
 :root[mode="md"].plt-ios {
+    // font-family: "Inter", sans-serif !important;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "slnt" 0;
     --ion-font-family: "Moderat", "PingFang SC", Arial, "Helvetica Neue", "Microsoft YaHei", sans-serif !important;
     // --ion-font-family: 'NotoSans', 'Moderat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
     -webkit-font-smoothing: antialiased !important;
@@ -8,11 +12,11 @@
     font-display: swap !important;
 
     ion-title {
-        font-weight:500 !important;
+        font-weight:550 !important;
     }
 
     .tabs-inner {
-        margin-top: 100px !important;
+        margin-top: 105px !important;
     }
     ion-footer {
         ion-toolbar, ion-tab-bar {
