updated code for user

--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -5,15 +5,15 @@
       <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
     
-    <!-- <ion-toolbar>
-
+    <ion-toolbar>
       <ion-item lines="none" detail="false" color="white">
         <ion-label>
           <h2 class="fs-18">Hello <span class="text-primary">{{_userservice.user?.NAME || _userservice.user?.FIRSTNAME | titlecase}} {{_userservice.user?.SURNAME | titlecase}}</span>,</h2>
           <p class="ion-text-wrap fs-12">Here is a summary of your investments</p>
         </ion-label>
       </ion-item>
-    </ion-toolbar> -->
+      
+    </ion-toolbar>
     <!-- <ion-item lines="none" detail="false" color="light">
       <ion-label>
         <h2 class="fs-18">Hello <span class="text-primary">{{_userservice.user?.NAME || _userservice.user?.FIRSTNAME | titlecase}} {{_userservice.user?.SURNAME | titlecase}}</span>,</h2>
